[package]
name = "actix-web-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4.0"
actix-web-lab = "0.17.0"
actix-cors = "0.6"

juniper = "0.15"

mysql = "21.0.0"
r2d2 = "0.8.10"
r2d2_mysql = "21"

dotenv = "0.15.0"
env_logger = "0.9"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }